# bpc-prp-projekt

./: Dockerfile  Makefile  README.md  setup.bash
.devcontainer/: devcontainer.json
src/robots/: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
src/robots/include/: CameraNode.h  ControlNode.h  EncoderNode.h  ImuNode.h  LidarNode.h  LineEstimator.h  LineNode.h  MotorNode.h  helper.hpp
src/robots/include/algorithms/: aruco_detector.hpp  kinematics.hpp  pid.h  planar_imu_integrator.hpp  turns.hpp
src/robots/include/nodes/: io_node.hpp
src/robots/include/robots/: io_node.hpp  lib.hpp
src/robots/robots/: motor_node.py
src/robots/src/: io_node.cpp  lib.cpp  main.cpp
src/robots/src/nodes/: io_node.cpp
src/robots/test/: CMakeLists.txt  my_test.cpp
